# granular-matter-sph

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
assets/models/: cube.glb  dump_truck.glb  grain.glb  grain_smooth.glb  hourglas.blend  hourglas.blend1  hourglas.glb  hourglas.mtl  plane.glb  sphere.glb  untitled.glb
docs/: .old.txt  README_MA.txt  cgMA.cls  cgMAgruppe.cls  ma.aux  ma.bbl  ma.bcf  ma.blg  ma.fdb_latexmk  ma.fls  ma.ist  ma.lof  ma.out  ma.run.xml  ma.tex  ma.toc  sources.bib
scripts/: plot.py
shaders/: ShaderInputChain.md  advection.comp  apply.comp  bitonic_sort.comp  boundary.comp  compile.bat  compile.sh  compute_density.comp  compute_density_pred.comp  compute_density_wind.comp  compute_internal_force.comp  compute_internal_force_wind.comp  compute_stress.comp  compute_stress_pred.comp  compute_surface_normal.comp  density_pressure.comp  force.comp  hr_advection.comp  iisph_rho_adv.comp  iisph_solve_dijpj.comp  iisph_solve_end.comp  iisph_solve_pressure.comp  iisph_v_adv.comp  init.comp  integrate.comp  integrate_wind.comp  line.frag  line.vert  neighborhood_update.comp  predict_density.comp  predict_force.comp  predict_position.comp  predict_stress.comp  predict_velocity_position.comp  screenquad.frag  screenquad.vert  shader.frag  shader.geom  shader.mesh  shader.task  (+4 more)
src/: basic_renderpass.cpp  basic_renderpass.h  camera.cpp  camera.h  compute_pass.cpp  compute_pass.h  core.cpp  core.h  global.h  granular_matter.cpp  granular_matter.h  imgui_renderpass.cpp  imgui_renderpass.h  initializers.h  input.cpp  input.h  layer.cpp  layer.h  line_renderpass.cpp  line_renderpass.h  main.cpp  model.cpp  model.h  particle_renderpass.cpp  particle_renderpass.h  render_context.cpp  render_context.h  renderpass.cpp  renderpass.h  rigidbody.cpp  rigidbody.h  screenquad_renderpass.cpp  screenquad_renderpass.h  shader_utils.cpp  shader_utils.h  spirv_utils.cpp  spirv_utils.h  triangle_renderpass.cpp  triangle_renderpass.h  utils.h  (+4 more)
